# colourmapper

./: .gitignore  Makefile  README.md  pyproject.toml
.githooks/: commit-msg
src/colourmapper/: ColourMapper.py  cm.py  mapping_file_create.py  named_colours_map.json
tests/: test_argument_parser.py  test_colour_mapper.py  test_colour_mapper_alt.py  test_mapping_file_create.py
