[build-system]
requires = ["setuptools>=72", "setuptools-scm>=8"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "colourmapper"
version = "0.1.0"
description = "Bidirectional colour name ↔ hex lookup backed by ~30K curated colour names"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = ["matplotlib"]

[project.scripts]
cm = "colourmapper.cm:_entry"
mapping-file-create = "colourmapper.mapping_file_create:_entry"

[project.urls]
Repository = "https://github.com/rondomondo/colourmapper"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"colourmapper" = ["*.json", "*.csv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 119

[tool.mypy]
python_version = "3.12"
strict = false

